# alcalorscraper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: init.sql  ofelia.ini
src/alcalorscraper/: __init__.py  __main__.py  backfill.py  config.py  database.py  logger.py  main.py  models.py  scraper.py
tests/: __init__.py  conftest.py  test_database.py  test_scraper.py
